--- a/style.css
+++ b/style.css
@@ -1,100 +1,6 @@
-*{
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
+
 body {
-  font-family: sans-serif;
+  font-family: 'Texturina', serif;
   font-size: 18px;
-  height: 100%;
-}
-
-a {
-  text-decoration: none;
-  color: rgba(34,54,69,0.7 );
-  font-weight: 500;
-}
-
-a:hover {
-  color: red !important;
-}
-
-ul{
-  list-style-type: none;
-}
-
-h5.lol{
-  font-family: 'Source Sans Pro', sans-serif;
-}
-
-.navbar {
-  background: white;
-  padding: 3rem 2rem;
-  height: 0rem;
-  min-height: 12wh;
-}
-
-.navbar .navbar-brand a{
-  padding: 1rem 0;
-  display: block;
-  text-decoration: none;
-}
-
-.navbar-brand{
-  font-family: 'Brush Script MT', cursive;
-  font-size: 2.0rem;
-  color: red;
-}
-
-.navbar-toggler{
-  background: red;
-  border: none;
-  padding: 10px 6px;
-  outline: none;
-}
-
-.navbar-toggler span{
-  display: block;
-  width: 22px;
-  height: 2px;
-  border: 1px;
-  background: white;
-}
-
-.navbar-toggler span + span{
-  margin-top: 4px;
-  width: 18px;
-  margin-left: 4px;
-}
-
-.navbar-toggler span + span + span{
-  width: 10px;
-  margin-left: 10px;
-}
-
-.navbar-expand-lg .navbar-nav .nav-link{
-  padding: 2rem 1.2rem;
-  font-size: 1.4rem;
-  position: relative;
-}
-
-.navbar-expand-lg .navbar-nav .nav-link:hover{
-  border-top: 4px solid red;
-
-}
-
-.navbar-expand-lg .navbar-nav .nav-link.active{
-  border-top: 4px solid red;
-  color: red;
-}
-
-.img-fluid {
-  max-width: 100%;
-  height: auto;
-}
-.card-body{
-  text-decoration: none;
-  font-size: 20px;
-  margin-top: auto;
-  font-weight: 600;
 }
